--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "main": "index.js",
   "dependencies": {
     "grunt": "~0.4.2",
-    "grunt-rsync": "^0.3.0",
-    "grunt-ssh": "^0.10.0",
-    "grunt-template": "^0.2.3",
-    "grunt-release": "^0.7.0"
+    "grunt-rsync": "~0.3.0",
+    "grunt-ssh": "~0.10.0",
+    "grunt-template": "~0.2.3",
+    "grunt-release": "~0.7.0"
   },
   "repository": {
     "type": "git",
