--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "grunt-rsync": "~0.3.0",
     "grunt-ssh": "~0.12.1",
     "grunt-template": "~0.2.3",
-    "grunt-release": "~0.7.0"
+    "grunt-release": "0.11.0"
   },
   "repository": {
     "type": "git",
