--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "grunt-remotehosting",
-  "version": "0.0.6",
+  "version": "0.0.8",
   "private:": true,
   "description": "Grunt task to help with remote hosting",
   "main": "index.js",
@@ -9,7 +9,7 @@
     "grunt-rsync": "~0.3.0",
     "grunt-ssh": "~0.12.1",
     "grunt-template": "~0.2.3",
-    "grunt-release": "0.11.0"
+    "grunt-release": "^0.11.0"
   },
   "repository": {
     "type": "git",
